# Serino

./: .dockerignore  .env  .env.development  .env.development.local.example  .env.example  .env.production  .env.production.local.example  .env.release.example  .gitignore  Caddyfile  Dockerfile.caddy  Dockerfile.waline  LICENSE  Makefile  README.md  docker-compose.release.yml  docker-compose.yml  eslint.config.base.js  package.json  pnpm-lock.yaml  tsconfig.base.json
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  litestream.yml.template  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0001_production_baseline.py  0002_add_site_meta_fields.py  0002_public_title_identity.py  0003_add_site_hero_video_url.py  0003_comment_image_rate_limit.py  0004_add_nav_and_content_metadata.py  0005_add_community_config_comment_settings.py  0005_add_feed_crawl_columns.py  0005_add_pin_columns.py  0006_add_community_config_comment_settings.py  0007_add_pin_columns.py  0008_add_feature_flags.py  0009_add_image_max_bytes_to_community_config.py  0010_add_traffic_daily_snapshots.py  0011_expand_resume_configuration.py  0012_add_site_poem_source.py  0013_add_site_poem_keywords.py  0014_add_asset_resource_fields.py  0015_add_asset_note.py  0016_add_hero_image_fields.py  0017_add_content_categories.py  0018_add_asset_scope.py  0019_add_site_user_auth.py  0019_add_visit_records.py  0020_merge_0019_heads.py  0021_add_site_auth_config.py  0022_add_site_admin_identities.py  0023_add_site_icon_url.py  0024_add_content_subscriptions.py  0024_add_runtime_site_settings.py  0025_add_automation_tables.py  0025_add_subscription_smtp_oauth2.py  0026_merge_0025_heads.py  0027_add_api_key_mcp_config.py  0028_add_api_key_suffix.py  0029_add_subscription_smtp_test_status.py  0030_add_subscription_delivery_and_templates.py  0031_add_webhook_subscription_test_status.py  0032_add_subscription_initiator_site_user.py  (+25 more)
backend/scripts/: backfill.sh  backup.sh  baseline-prod.sh  bootstrap-prod.sh  bootstrap.sh  data-migrate.sh  dev-backend.sh  dev-waline.sh  first-admin-prod.sh  generate_backup_credentials.py  migrate.sh  process-env.sh  restore.sh  runtime-lib.sh  serve.sh
backend/src/aerisun/: __init__.py  cli.py  db.py  main.py  mcp_auth.py  mcp_server.py  models.py  schemas.py  seed.py  settings.py
backend/tests/: conftest.py  test_agent_usage.py  test_backup_receiver.py  test_backup_restore.py  test_bootstrap_admin.py  test_bootstrap_seed.py  test_contract_fixtures.py  test_cors_override.py  test_csrf.py  test_data_backfills.py  test_data_flow_round_trip.py  test_dev_seed.py  test_installer_lifecycle.py  test_logging.py  test_migrations.py  test_public_community_config.py  test_rate_limit.py  test_runtime_path_contracts.py  test_runtime_seo_feed_cors.py  test_search.py  test_security_headers.py  test_seed.py  test_seo.py  test_startup_checks.py
backend/tests/admin/: test_assets.py  test_auth.py  test_automation_config.py  test_backup_sync.py  test_community_config.py  test_config_revisions.py  test_content_crud.py  test_integrations_feeds.py  (+13 more)
(+624 files in other folders)
