[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aerisun-backend"
version = "0.1.0"
description = "Aerisun v1 backend skeleton"
requires-python = ">=3.13"
dependencies = [
  "alembic>=1.18.4",
  "fastapi>=0.135.1",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.8.0",
  "sqlalchemy>=2.0.48",
  "uvicorn[standard]>=0.34.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

